and this project adheres to [Semantic Versioning](http://semver.org/).

## [0.2.9] 2017 02-22
## fixed
	regnereate block mesh will erase ifinite divs
	region_length=0 err
## added
	add  return value check for get_divs
	no..python script now will output to jobid directory
## notes
	I should save mesh log each time
	now two views can show togther in paraview in realtime

## [0.2.8] 2017 02-22
## added
	two ds writers in icoFoam
## changed
	modify the locks in put_raw_buffer, so that lock name will be associated
	with variable names

## [0.2.7] 2017 02-21
## added:
	add two cluster variable functions in ds_adaptor
	add a mapping function from region matrix to original matrix space
	add clusterid field in Attributes

## [0.2.6] 2017 02-20
## fixed:
	max_reader set to one in catalyst appllication
## addeed
	sleep in icofoam, now it can connect to pvclient.
	

## [0.2.5] 2017 02-19
## changed
previous toy simulator produce many zero fields, now using cavaty with larger
values
## changed
cavaty changed back, only difference is the definition from 20 to 10

## bug fixed
previously in catalyst FEDataStructures.cxx
	the extent should be the number of points

changed 

## [0.2.4] 2017-02-18
### added
- openfoam added and communicate with catalyst using ds_adapptor
- code minor reorgnized


## [0.2.3.3] 2017-02-01
### updated
- no linked with static catalyst (not  stand alone) library
- two jobs:
	bigred.job:simu_gen-consumer-analysit
	catalyst: simu_gen-> catatalyst to files


## [0.2.3.2] -2017-01-27
### changed
- ds_adator will take over all ds operations in simulator and catalyst
- now ds_server is also dynamically linked

### note
1. alocation outside loop
- free outside the loop



## [0.2.3.1] -2017-01-25
### Added
- now dspaces can complied with catalyst
### changed
- add extern C in common_utility.h
### note
1. alocation outside loop
- free outside the loop

## [0.2.3] - 2017-01-24
### Added 