@@ -24,7 +24,7 @@ startTime       0;
 stopAt          endTime;
 
 //endTime         0.5;
-endTime         5;
+endTime         100;
 
 //deltaT          0.0001;
 deltaT          0.0005;
